# home-internal-api

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
deploy/systemd/: home-internal-api.service
src/home_internal_api/: __init__.py  __main__.py  app.py  collectors.py  config.py  models.py
tests/: test_app.py
