[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "home-internal-api"
version = "0.1.0"
description = "LAN-only monitoring API for home-server internal state"
requires-python = ">=3.11"
readme = "README.md"
authors = [
  { name = "Codex" }
]
dependencies = []

[project.scripts]
home-internal-api = "home_internal_api.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
